--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
     <!--Styles-->
     <link rel="stylesheet" href="style.css">
 
-    <title>Darya Komsa</title>
+    <title>Darya Komsa: About</title>
   </head>
   <body>
     <main>
@@ -21,7 +21,18 @@
           <li><a href="/"><i class="fas fa-home fa-lg"></i></a></li>
           <li><a href="#" class="active">About me <i class="fas fa-caret-left"></i></a></li>
           <li><a href="/projects.html">Projects</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href = "mailto:komsa.darya@gmail.com">
+            <i class="far fa-envelope fa-lg"></i>
+          </a></li>
+          <li><a href="https://www.linkedin.com/feed/">
+            <i class="fab fa-linkedin-in fa-lg"></i>
+          </a></li>
+          <li><a href="https://github.com/d-honeybadger">
+            <i class="fab fa-github fa-lg"></i>
+          </a></li>
+          <li><a href="https://www.facebook.com/daryakomsa">
+            <i class="fab fa-facebook-f fa-lg"></i>
+          </a></li>
         </ul>
       </nav>
       <section id="about">
