--- a/index.html
+++ b/index.html
@@ -21,7 +21,19 @@
         <ul>
           <li><a href="/aboutme.html">About me</a></li>
           <li><a href="/projects.html">Projects</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href = "mailto:komsa.darya@gmail.com">
+            <i class="far fa-envelope fa-lg"></i>
+            <span id="email"> komsa.darya@gmail.com</span>
+          </a></li>
+          <li><a href="https://www.linkedin.com/feed/">
+            <i class="fab fa-linkedin-in fa-lg"></i>
+          </a></li>
+          <li><a href="https://github.com/d-honeybadger">
+            <i class="fab fa-github fa-lg"></i>
+          </a></li>
+          <li><a href="https://www.facebook.com/daryakomsa">
+            <i class="fab fa-facebook-f fa-lg"></i>
+          </a></li>
         </ul>
       </nav>
       <hgroup>
