--- a/projects.html
+++ b/projects.html
@@ -12,32 +12,72 @@
     <!--Styles-->
     <link rel="stylesheet" href="style.css">
 
-    <title>Darya Komsa</title>
+    <title>Darya Komsa: Projects</title>
   </head>
-  <body>
+  <body onload="speedUpVideos()">
     <main>
       <nav class="side-nav">
         <ul>
           <li><a href="/"><i class="fas fa-home fa-lg"></i></a></li>
           <li><a href="/aboutme.html">About me</a></li>
           <li><a href="#" class="active">Projects <i class="fas fa-caret-left"></i></a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href = "mailto:komsa.darya@gmail.com">
+            <i class="far fa-envelope fa-lg"></i>
+          </a></li>
+          <li><a href="https://www.linkedin.com/feed/">
+            <i class="fab fa-linkedin-in fa-lg"></i>
+          </a></li>
+          <li><a href="https://github.com/d-honeybadger">
+            <i class="fab fa-github fa-lg"></i>
+          </a></li>
+          <li><a href="https://www.facebook.com/daryakomsa">
+            <i class="fab fa-facebook-f fa-lg"></i>
+          </a></li>
         </ul>
       </nav>
       <section id="projects">
         <h2>Projects</h2>
-        <div>
-
-        </div>
-        <div>
-
-        </div>
+        <ul id="project-list">
+          <li>
+            <h4><a href="https://pangolin.herokuapp.com">Pangolin</a> &#8226;
+            <a href="https://pangolin.herokuapp.com" class="app-link">pangolin.herokuapp.com</a></h4>
+            <p>Pangolin is an instant messaging app. It is built with WebSockets,
+            Node.js, React, Redux, and MongoDB. Pangolin supports multiple-user
+            chats, instant searches for contacts and chats, profile picture upload
+            and more.</p>
+            <p><a href="https://github.com/d-honeybadger/pangolin">GitHub repo</a></p>
+            <video autoplay controls id="pangolin_video">
+              <source src="/resources/pangolin_video.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+          </li>
+          <li>
+            <h4><a href="https://uwochem.herokuapp.com">UWOChem</a> &#8226;
+            <a href="https://uwochem.herokuapp.com" class="app-link">uwochem.herokuapp.com</a></h4>
+            <p>UWOChem is an app for chemistry students at Western to practice
+            solving problems. Most problems are algorithmic, meaning that
+            two users will have different initial data. Users can create profiles
+            to track their progress. OAuth is supported for login.</p>
+            <p><a href="https://github.com/d-honeybadger/UWOChem">GitHub repo</a></p>
+            <video autoplay controls id="uwochem_video">
+              <source src="/resources/uwochem_video.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+          </li>
+          <li>
+            <h4><a href="/">Portfolio website</a></h4>
+            <p>This website uses vanilla JavaScript and Canvas for the animation, HTML,
+              and CSS. No libraries.</p>
+            <p><a href="https://github.com/d-honeybadger/d-honeybadger.github.io">GitHub repo</a></p>
+          </li>
+        </ul>
       </section>
       <div class="next-button">
-        <a href="/contact.html" title="Contact info">
+        <a href="/" title="Home">
           <i class="fas fa-caret-right"></i>
         </a>
       </div>
     </main>
+    <script type="text/javascript" src="speedUpVideos.js"></script>
   </body>
 </html>
