IE 11 support (older JS syntax and grid tweaks)

--- a/aboutme.html
+++ b/aboutme.html
@@ -37,7 +37,7 @@
       </nav>
       <section id="about">
         <h2>About me</h2>
-        <div>
+        <div class="summary">
           <figure>
             <div class="frame-background"></div>
             <div class="frame-triangle-top"></div>
@@ -53,7 +53,7 @@
           <p>I love building things on the web, challenges, puzzles,
           and everything about math.</p>
         </div>
-        <div>
+        <div class="skills">
           <div class="skills-list">
             <h4>Things I'm actively using:</h4>
             <ul>
@@ -73,7 +73,7 @@
               <li>Java</li>
               <li>Python</li>
               <li>PostgreSQL</li>
-              <li>Shell and shell scripting</li>
+              <li>Bash</li>
               <li>C</li>
               <li>Latex</li>
             </ul>
