--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   <body onload="drawTriangle()">
     <header>
       <div class="header-background">
-        <canvas id="sierpinskiTriangle"></canvas>
+        <canvas id="sierpinskiTriangle">
+          <p>A nice Sierpinski Triangle animation should be here, but it did
+            not work in your browser.</p>
+        </canvas>
       </div>
       <nav class="title-nav">
         <ul>
