--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
       </nav>
       <section id="projects">
         <h2>Projects</h2>
-        <ul id="project-list">
+        <ul>
           <li>
             <h4><a href="https://pangolin.herokuapp.com">Pangolin</a> &#8226;
             <a href="https://pangolin.herokuapp.com" class="app-link">pangolin.herokuapp.com</a></h4>
@@ -67,16 +67,11 @@
           <li>
             <h4><a href="/">Portfolio website</a></h4>
             <p>This website uses vanilla JavaScript and Canvas for the animation, HTML,
-              and CSS. No libraries.</p>
+              and CSS.</p>
             <p><a href="https://github.com/d-honeybadger/d-honeybadger.github.io">GitHub repo</a></p>
           </li>
         </ul>
       </section>
-      <div class="next-button">
-        <a href="/" title="Home">
-          <i class="fas fa-caret-right"></i>
-        </a>
-      </div>
     </main>
     <script type="text/javascript" src="speedUpVideos.js"></script>
   </body>
