Next button, separated css into files

--- a/projects.html
+++ b/projects.html
@@ -7,10 +7,10 @@
     <!--Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cardo" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <!--Styles-->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="projects.css">
 
     <title>Darya Komsa: Projects</title>
   </head>
