--- a/aboutme.html
+++ b/aboutme.html
@@ -7,10 +7,10 @@
     <!--Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cardo" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <!--Styles-->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="aboutme.css">
 
     <title>Darya Komsa: About</title>
   </head>
@@ -81,12 +81,10 @@
           <a href="/resources/resume.pdf" download="DaryaKomsa_resume.pdf"
             class="button-primary">Download resume</a>
         </div>
+        <div class="next-button">
+          <a href="/projects.html" title="Portfolio"></a>
+        </div>
       </section>
-      <div class="next-button">
-        <a href="/projects.html" title="Portfolio">
-          <i class="fas fa-caret-right"></i>
-        </a>
-      </div>
     </main>
   </body>
 </html>
