--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <!--Styles-->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 
     <title>Darya Komsa</title>
   </head>
@@ -43,9 +44,7 @@
         <h1>Hi! I'm Darya Komsa, a full-stack developer</h1>
       </hgroup>
       <div class="next-button">
-        <a href="/aboutme.html" title="About me">
-          <i class="fas fa-caret-right"></i>
-        </a>
+        <a href="/aboutme.html" title="About me"></a>
       </div>
     </header>
     <script type="text/javascript" src="sierpinskiAnimation.js"></script>
