Fixed next button alignment, updated resume

--- a/aboutme.html
+++ b/aboutme.html
@@ -46,16 +46,16 @@
               <img src="/resources/darya.jpg" alt="Darya Komsa" width="140px"/>
             </div>
           </figure>
-          <p>In the previous life, I was doing research in computational chemistry.
-          It involved some shell scripting and programming in ancient Fortran 70...
-          The programming part was so much fun that I decided to dive into it.
-          Got a CS diploma, completed a ton of online courses, and here I am now.</p>
-          <p>I love building things on the web, challenges, puzzles,
-          and everything about math.</p>
+          <p>In a previous life, I was a researcher in computational chemistry at UWO.
+          My job involved shell scripting, programming in ancient Fortran 70, and
+          the programming part was so rewarding that I decided to dive into it.
+          I earned a CS diploma from UWO, completed a ton of online courses, and here I am now.</p>
+          <p>I love creating and building anything on the web. I also enjoy challenges,
+            puzzles, and math.</p>
         </div>
         <div class="skills">
           <div class="skills-list">
-            <h4>Things I'm actively using:</h4>
+            <h4>Actively developing with:</h4>
             <ul>
               <li>Javascript</li>
               <li>HTML</li>
@@ -68,7 +68,7 @@
             </ul>
           <div>
           <div class="skills-list">
-            <h4>Not currently using but know anyways:</h4>
+            <h4>Used in the past:</h4>
             <ul>
               <li>Java</li>
               <li>Python</li>
